Add home header, fix css

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,7 +2,10 @@
 
 .loadingBackdrop {
   position: absolute;
-  inset: 0;
+  top: 24px;
+  left: 24px;
+  right: 0;
+  bottom: 0;
   z-index: 10;
 
   display: flex;
@@ -10,8 +13,4 @@
   align-items: center;
 
   backdrop-filter: blur(4px);
-}
-
-a.addCityLink {
-  @extend %link-button;
 }
